# django-lab

./: pyproject.toml  tasks.json
apps/tasks/: admin.py  forms.py  models.py  views.py
apps/tasks/migrations/: 0001_initial.py
apps/users/: admin.py  apps.py  forms.py  models.py
apps/users/migrations/: 0001_initial.py
config/: settings.py  urls.py
templates/: base.html
templates/partials/: navbar.html  task_form.html  task_item.html
templates/tasks/: create.html  index.html  pricing.html  update.html
