[project]
name = "django-lab"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Macktireh", email = "abdimack97@gmail.com"},
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "django>=5.0.6",
    "django-unicorn>=0.60.0",
    "django-view-decorator>=0.0.4",
]


[tool.pdm.dev-dependencies]
dev = [
    "django-browser-reload>=1.12.1",
    "ruff>=0.4.3",
]


[tool.pdm]
distribution = false


[tool.pdm.scripts]
newapp = "python manage.py startapp"
makemigrations = "python manage.py makemigrations"
migrate = "python manage.py migrate"
start = "python manage.py runserver"
createsuperuser = "python manage.py createsuperuser --username=admin --email=admin@example.com --first_name=Admin --last_name=AD"
collectstatic = "python manage.py collectstatic"
loaddata = "python manage.py loaddata"
dumpdata = "python manage.py dumpdata"
tailwind = "npx tailwindcss -i ./static/src/input.css -o ./static/src/output.css --watch"
rufffix = "ruff --fix --exit-zero ."
ruffformat = "ruff format ."
ruffcheck = "ruff check ."
mmm = {composite = ["makemigrations", "migrate"]}
dev = {composite = ["migrate", "start"]}
ruff = {composite = ["rufffix", "ruffformat", "ruffcheck"]}


[tool.ruff]
line-length = 120
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
